Migration to java 25 and sb4;